--- a/backend/package.json
+++ b/backend/package.json
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.450.0",
-    "@aws-sdk/client-s3": "^3.450.0",
     "@aws-sdk/client-dynamodb": "^3.450.0",
+    "@aws-sdk/client-s3": "^3.450.0",
     "@aws-sdk/util-dynamodb": "^3.450.0",
     "aws-lambda": "^1.0.7",
-    "uuid": "^9.0.1",
-    "sharp": "^0.32.6",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "serverless": "^3.36.0",
-    "serverless-offline": "^13.3.0",
-    "serverless-dotenv-plugin": "^6.0.0"
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^13.3.0"
   }
 }
