--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.450.0",
     "@aws-sdk/client-dynamodb": "^3.450.0",
     "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/lib-dynamodb": "^3.896.0",
     "@aws-sdk/util-dynamodb": "^3.450.0",
     "aws-lambda": "^1.0.7",
     "ffmpeg-static": "^5.2.0",
