--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,3 +1,6 @@
+custom:
+  serverless-offline:
+    httpPort: 8080
 service: what-if-studio-backend
 
 frameworkVersion: "3"
@@ -15,7 +18,7 @@ provider:
     USERS_TABLE: ${self:service}-users-${self:provider.stage}
     MEDIA_BUCKET: ${self:service}-media-${self:provider.stage}
     BEDROCK_REGION: us-east-1
-    BEDROCK_MODEL_ID: anthropic.claude-sonnet-4-20250514-v1:0
+    BEDROCK_MODEL_ID: anthropic.claude-3-sonnet-20240229-v1:0
   iam:
     role:
       statements:
@@ -32,6 +35,7 @@ provider:
             - s3:PutObject
             - s3:DeleteObject
             - s3:PutObjectAcl
+            - s3:ListBucket
           Resource:
             - "arn:aws:s3:::${self:provider.environment.MEDIA_BUCKET}"
             - "arn:aws:s3:::${self:provider.environment.MEDIA_BUCKET}/*"
